--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,6 +133,21 @@
                 android:value="com.yarashevich.kiryl.ipd.MainActivity" />
         </activity>
 
+        <activity
+            android:name=".SrokOplata"
+            android:label="@string/timing">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.yarashevich.kiryl.ipd.MainActivity" />
+        </activity>
+        <activity
+            android:name=".PhoneBookIpd"
+            android:label="@string/phonebookipd">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.yarashevich.kiryl.ipd.MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
