--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 28 09:15:19 MSK 2018
-sdk.dir=E\:\\Users\\Kiruha_21\\AppData\\Local\\Android\\sdk1
+#Thu Apr 05 06:16:22 MSK 2018
+sdk.dir=/home/kirill/Android/Sdk
