--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-
+*.iml
+.gradle
+.idea
+/fourpda.keystore
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
